# window-selector

./: Cargo.toml  LEARN_RUST.html  LEARN_RUST.md  Makefile  README.md  build.rs  run_debug.bat
.Agent/: DIAGNOSIS.md  IMPLEMENTATION_PLAN.md  LABEL_MODE.md  QUICK_REFERENCE.md  SOLUTION.md  TEST_GUIDE.md  TROUBLESHOOTING.md
.cargo/: config.toml
.github/workflows/: release.yml
installer/: installer.nsi
resources/: app.rc
src/: about_dialog.rs  accent_color.rs  animation.rs  config.rs  dwm_thumbnails.rs  grid_layout.rs  hotkey.rs  icon.rs  interaction.rs  keyboard_hook.rs  keycodes.rs  letter_assignment.rs  logging.rs  main.rs  monitor.rs  mru_tracker.rs  overlay.rs  overlay_renderer.rs  settings_dialog.rs  settings_panel.rs  settings_renderer.rs  startup.rs  state.rs  tray.rs  window_enumerator.rs  window_icon.rs  window_info.rs  window_switcher.rs
